Adding a new feature of search listing

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,4 +1,14 @@
 <% layout("/layouts/boilerplate.ejs") %>
+
+<style>
+  .edit-btn{
+    background-color: #fe424d !important;
+    border: none !important;
+    body {
+    font-family: 'Nunito', sans-serif;
+  }
+}
+</style>
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Edit your Listing</h3>
@@ -56,9 +66,7 @@
           </div>
       </div>
 
-
       
-
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
     </form>
   </div>
