--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,9 +4,128 @@
   <!-- <form method="GET" action="/listings/new">
       <button>Create New Listing</button>
     </form> -->
-    
+ 
 
 
+<style>
+  body {
+    font-family: 'Nunito', sans-serif;
+  }
+  .listing-card{
+    border: none !important;
+    margin-bottom: 2rem;
+}
+
+.card-img-top{
+    border-radius: 1rem !important;
+    width: 100% !important;
+    object-fit: cover !important;
+}
+
+.card.body{
+    padding: 0 !important;
+}
+.card-text p {
+    font-weight: 400;
+}
+
+.listing-links{
+    text-decoration: none;
+}
+
+  .card-img-overlay{
+    opacity: 0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
+}
+
+  #filters{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .filter{
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+  }
+  .filter:hover{
+    opacity: 1;
+    cursor: pointer; 
+  }
+  .filter p{
+    font-size: 0.8rem;
+  }
+  .tax-info{
+    display: none;
+  }
+  .tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.25rem;
+    padding: 1rem;
+    margin-left: 10rem;
+    display: flex;
+    align-items: center;
+  }
+  /* nav  */
+.navbar{
+  height: 5rem;
+  background-color: white;
+}
+
+.fa-compass{
+  color: #fe424d;
+  font-size: 2rem;
+}
+
+.nav-link{
+  color: #222222 !important;
+}
+
+.f-info-links a{
+  text-decoration: none;
+  color: #222222;
+
+}
+.f-info-links a:hover{
+  text-decoration: underline;
+}
+.f-info-links, 
+.f-info-socials,
+.f-info-brand{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.f-info-socials{
+  width: 100%;
+  font-size: 1.2rem;
+  margin-right: 2rem;
+  padding: 2rem;
+
+}
+
+.f-info-socials i{
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+
+.f-info{
+  text-align: center;
+  display: flex;
+  background-color: #ebebeb;
+  height: 8rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: space-evenly;
+}
+</style>
 
     <div id="filters">
 
