--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,5 +1,16 @@
 <% layout("/layouts/boilerplate.ejs") %>
-  <div class="row">
+  
+<style>
+  .add-btn{
+    background-color: #fe424d !important;
+    border: none !important;
+}
+body {
+    font-family: 'Nunito', sans-serif;
+  }
+</style>
+
+<div class="row">
     <div class="col-8 offset-2">
       <br><br>
       <h3>Create a New Listing</h3>
@@ -53,7 +64,6 @@
           </div>
         </div>
 
-       
 
         <br /><br />
         <button class="btn btn-dark add-btn">Add</button>
