--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,32 +1,58 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
-<div class="row">
-    <div class="col-8 offset-3">
-        <h1>Login</h1>
-        <form action="/login" method="POST" class="needs-validation" novalidate>
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input name="username" type="text" id="username" class="form-control" required />
+<div class="container">
+    <div class="row">
+        <div class="col-8 offset-2">
+            <h1>Login</h1>
+            <form action="/login" method="POST" class="needs-validation" novalidate>
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input name="username" type="text" id="username" class="form-control" required />
+                </div>
 
-            </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input name="password" type="password" id="password" class="form-control" required />
+                </div>
+                <button class="btn btn-success">Login</button>
+            </form>
 
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input name="password" type="password" id="password" class="form-control" required />
-            </div>
-            <button class="btn btn-success">Login</button>
-        </form>
+            <% if (error && error.length > 0) { %>
+                <div class="alert alert-danger mt-3" role="alert">
+                    <%= error %>
+                </div>
+            <% } %>
 
-        <% if (error && error.length > 0) { %>
-            <div class="alert alert-danger mt-3" role="alert">
-                <%= error %>
-            </div>
-        <% } %>
-
-        <% if (success && success.length > 0) { %>
-            <div class="alert alert-success mt-3" role="alert">
-                <%= success %>
-            </div>
-        <% } %>
+            <% if (success && success.length > 0) { %>
+                <div class="alert alert-success mt-3" role="alert">
+                    <%= success %>
+                </div>
+            <% } %>
+        </div>
+        <div class="mt-3  signup">
+            <p>Doesn't have an account? <a href="/signup">Create One</a></p>
+        </div>
     </div>
 </div>
+
+<style>
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .container {
+        flex: 1;
+    }
+
+    p a{
+        text-decoration: none;
+    }
+    .signup{
+        margin-left: 12rem;
+    }
+</style>
+
+
+
