minor improvement in css

--- a/public/CSS/rating.css
+++ b/public/CSS/rating.css
@@ -1,4 +1,4 @@
-.starability-result {
+/* .starability-result {
     position: relative;
     width: 150px;
     height: 30px;
@@ -194,4 +194,4 @@
   .starability-slot > input:focus ~ label {
     -webkit-transition: background-position .7s;
     transition: background-position .7s;
-  }
+  } */
