--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,22 +1,21 @@
-body {
+/* body {
     font-family: 'Nunito', sans-serif;
   }
   
-  /* h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6 {
     font-family: 'Nunito', sans-serif;
   }
-  
   p {
     font-family: 'Nunito', sans-serif;
-  } */
+  }
   
 
-/* body{
+body{
     font-family: "Plus Jakarta Sans", sans-serif !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-} */
+}
 .container{
      flex: 1;
 }
@@ -74,7 +73,7 @@ body {
 }
 
 /* cards */
-.listing-card{
+/* .listing-card{
     border: none !important;
     margin-bottom: 2rem;
 }
@@ -97,7 +96,7 @@ body {
 }
 
 /* card effect */
-.card-img-overlay{
+/* .card-img-overlay{
     opacity: 0;
 }
 .card-img-overlay:hover{
@@ -105,18 +104,18 @@ body {
     background-color: white;
 }
 /* New Page */
-.add-btn{
+/* .add-btn{
     background-color: #fe424d !important;
     border: none !important;
 }
 
-/* Edit Page */
+Edit Page 
 .edit-btn{
     background-color: #fe424d !important;
     border: none !important;
 }
 
-/* show page  */
+ show page 
 
 .show-image{
     height: 30vh;
@@ -131,14 +130,14 @@ body {
     padding-right: 0;
 }
 
-/* map */
+ map 
 
 #map{
     height: 400px;
     width: 80vh;
 }
 
-
+Tax
   #filters{
     display: flex;
     flex-wrap: wrap;
@@ -159,14 +158,15 @@ body {
   }
   .tax-info{
     display: none;
-  }
+  } 
   .tax-toggle{
     border: 1px solid black;
     border-radius: 1rem;
     height: 3.25rem;
     padding: 1rem;
-    margin-left: 5rem;
+    margin-left: 10rem;
     display: flex;
     align-items: center;
   }
-
+  
+*/
