--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -4,10 +4,64 @@
   .edit-btn{
     background-color: #fe424d !important;
     border: none !important;
-    body {
+    
+}
+body {
     font-family: 'Nunito', sans-serif;
   }
+.navbar{
+    height: 5rem;
+    background-color: white;
 }
+
+.fa-compass{
+    color: #fe424d;
+    font-size: 2rem;
+}
+
+.nav-link{
+    color: #222222 !important;
+}
+
+.f-info-links a{
+    text-decoration: none;
+    color: #222222;
+
+}
+.f-info-links a:hover{
+    text-decoration: underline;
+}
+.f-info-links, 
+.f-info-socials,
+.f-info-brand{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.f-info-socials{
+    width: 100%;
+    font-size: 1.2rem;
+    margin-right: 2rem;
+}
+
+.f-info-socials i{
+    margin-right: 1rem;
+    font-size: 1rem;
+}
+
+.f-info{
+    text-align: center;
+    display: flex;
+    background-color: #ebebeb;
+    height: 8rem;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+
 </style>
 <div class="row mt-3">
   <div class="col-8 offset-2">
@@ -66,7 +120,9 @@
           </div>
       </div>
 
+
       
+
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
     </form>
   </div>
