--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -319,12 +319,12 @@
   <div class="card col-6 offset-3 show-card listing-card">
     <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
     <div class="card-body">
-      <p class="card-text">Owned By <i><%= listing.owner.username %></i></p>
+      <p class="card-text">Owned By <b><i><%= listing.owner.username %></i></b></p>
         
       <p class="card-text"> <%= listing.description %> </p>
         <p class="card-text"> &#8377;<%= listing.price.toLocaleString("en-IN") %> </p>
-          <p class="card-text"> <%= listing.location %> </p>
-            <p class="card-text"> <%= listing.country %></p>
+          <p class="card-text"> <b><%= listing.location %> </b></p>
+            <p class="card-text"> <b><%= listing.country %></b></p>
       </p>
     </div>
   </div>
