Fixing bug in Schema

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,25 @@
+<style>
+    .f-info-socials i{
+        color: rgb(90, 90, 222);
+    }
+    .f-info-brand{
+        color: rgb(90, 90, 222);
+    }
+    
+</style>
+
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
         </div>
         <div class="f-info-brand">&copy:WanderLust Private Limited</div>
         <div class="f-info-links">
