--- a/views/listings/search.ejs
+++ b/views/listings/search.ejs
@@ -65,6 +65,60 @@
     color: #fe424d;
     font-size: 2rem;
 }
+.navbar{
+  height: 5rem;
+  background-color: white;
+}
+
+.fa-compass{
+  color: #fe424d;
+  font-size: 2rem;
+}
+
+.nav-link{
+  color: #222222 !important;
+}
+
+.f-info-links a{
+  text-decoration: none;
+  color: #222222;
+
+}
+.f-info-links a:hover{
+  text-decoration: underline;
+}
+.f-info-links, 
+.f-info-socials,
+.f-info-brand{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.f-info-socials{
+  width: 100%;
+  font-size: 1.2rem;
+  margin-right: 2rem;
+  padding: 2rem;
+
+}
+
+.f-info-socials i{
+  margin-right: 1rem;
+  font-size: 1rem;
+}
+
+.f-info{
+  text-align: center;
+  display: flex;
+  background-color: #ebebeb;
+  height: 8rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: space-evenly;
+}
+
 
 
 /* paragraph */
